--- a/task-management-application-97-main/index.html
+++ b/task-management-application-97-main/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>task-hub-portal</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>task-management-application</title>
+    <meta name="description" content="Bettscy's Project" />
+    <meta name="author" content="Bettscy" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
